deps update; remove tika-parsers from dist